<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menuPlayer1LBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1_LBL"
        app:layout_constraintBottom_toTopOf="@+id/menuSetPlayer1"
        app:layout_constraintStart_toStartOf="@+id/menuSetPlayer1" />

    <EditText
        android:id="@+id/menuSetPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuTitle" />

    <TextView
        android:id="@+id/menuPlayer2LBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2_LBL"
        app:layout_constraintBottom_toTopOf="@+id/menuSetPlayer2"
        app:layout_constraintStart_toStartOf="@+id/menuSetPlayer2" />

    <EditText
        android:id="@+id/menuSetPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSetPlayer1" />

    <Button
        android:id="@+id/submitPlayerNames"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:onClick="submitName"
        android:text="@string/submit_player_names"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSetPlayer2" />
</androidx.constraintlayout.widget.ConstraintLayout>